--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.3.3",
         "psr/log": "1.0.*",
-        "michaldudek/foundation": "dev-master"
+        "michaldudek/foundation": ">=0.9,<2.0"
     },
     "autoload": {
         "psr-0": {
